--- a/rgc-list/package.json
+++ b/rgc-list/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "wunder-list",
+  "name": "rgc-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-mixpanel": "^0.0.11",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "react-star-rating-component": "^1.4.1",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
